--- a/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
+++ b/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
@@ -2,45 +2,49 @@
 triple:          'arm64-apple-darwin'
 binary-path:     cclient
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002870, symSize: 0x6C }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002870, symSize: 0x6C }
-  - { offsetInCU: 0x85, offset: 0x85, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x6C, symBinAddr: 0x1000028DC, symSize: 0x58 }
-  - { offsetInCU: 0xB7, offset: 0xB7, size: 0x8, addend: 0x0, symName: _sendToServer, symObjAddr: 0xC4, symBinAddr: 0x100002934, symSize: 0xF8 }
-  - { offsetInCU: 0x105, offset: 0x105, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x1BC, symBinAddr: 0x100002A2C, symSize: 0xDC }
-  - { offsetInCU: 0x26, offset: 0x1A4, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002B08, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x221, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002B08, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x273, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100002C90, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x29B, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100002CB4, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x2FB, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002D84, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x369, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002EDC, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x3BB, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100003010, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x53B, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100003164, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x556, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x1000031D8, symSize: 0x40 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002570, symSize: 0x6C }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002570, symSize: 0x6C }
+  - { offsetInCU: 0x85, offset: 0x85, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x6C, symBinAddr: 0x1000025DC, symSize: 0x58 }
+  - { offsetInCU: 0xB7, offset: 0xB7, size: 0x8, addend: 0x0, symName: _sendToServer, symObjAddr: 0xC4, symBinAddr: 0x100002634, symSize: 0xEC }
+  - { offsetInCU: 0x105, offset: 0x105, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x1B0, symBinAddr: 0x100002720, symSize: 0xDC }
+  - { offsetInCU: 0x26, offset: 0x1A4, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000027FC, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x221, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000027FC, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x273, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100002984, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x29B, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000029A8, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x2FB, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002A78, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x369, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002BD0, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x3BB, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002D04, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x53B, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002E58, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x556, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002ECC, symSize: 0x40 }
   - { offsetInCU: 0x66, offset: 0x57B, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x59F, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x1000034D8, symSize: 0x74 }
+  - { offsetInCU: 0x8A, offset: 0x59F, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x1000031CC, symSize: 0x74 }
   - { offsetInCU: 0xAF, offset: 0x5C4, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x5EA, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x1000032D0, symSize: 0x188 }
+  - { offsetInCU: 0xD5, offset: 0x5EA, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002FC4, symSize: 0x188 }
   - { offsetInCU: 0xFA, offset: 0x60F, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x88E, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100003164, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x8C0, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100003218, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0x8E8, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x10000323C, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0x93A, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100003458, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0x98C, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x1000034B0, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0x9B4, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x10000354C, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0x9DC, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100003574, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0x9F1, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x1000035B4, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xB3A, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003688, symSize: 0x30 }
+  - { offsetInCU: 0x379, offset: 0x88E, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002E58, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0x8C0, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002F0C, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0x8E8, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002F30, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0x93A, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x10000314C, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0x98C, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x1000031A4, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0x9B4, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100003240, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0x9DC, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100003268, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0x9F1, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x1000032A8, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xB3A, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x10000337C, symSize: 0x30 }
   - { offsetInCU: 0x4D, offset: 0xB61, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
   - { offsetInCU: 0xA2, offset: 0xBB6, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
   - { offsetInCU: 0xB7, offset: 0xBCB, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xBD4, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003688, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xBE9, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x1000036B8, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xC0D, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100003760, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xC3F, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100003860, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xC63, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100003898, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xCDB, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003988, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xCFE, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003988, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xD5E, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100003A1C, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xDBE, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100003A90, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xE02, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003AFC, symSize: 0x60 }
+  - { offsetInCU: 0xC0, offset: 0xBD4, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x10000337C, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xBE9, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x1000033AC, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xC0D, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100003454, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xC3F, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100003554, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xC63, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x10000358C, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xCDB, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x10000367C, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xCFE, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x10000367C, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xD5E, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100003710, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xDBE, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100003784, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xE02, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x1000037F0, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0xEA0, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003850, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0xECD, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003850, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0xF1F, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100003940, symSize: 0x160 }
+  - { offsetInCU: 0x121, offset: 0xF9B, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x250, symBinAddr: 0x100003AA0, symSize: 0x24 }
 ...
