--- a/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
+++ b/server.dSYM/Contents/Resources/Relocations/aarch64/server.yml
@@ -2,48 +2,51 @@
 triple:          'arm64-apple-darwin'
 binary-path:     server
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002658, symSize: 0x60 }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002658, symSize: 0x60 }
-  - { offsetInCU: 0xA1, offset: 0xA1, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x60, symBinAddr: 0x1000026B8, symSize: 0x94 }
-  - { offsetInCU: 0xE5, offset: 0xE5, size: 0x8, addend: 0x0, symName: _recvFromClient, symObjAddr: 0xF4, symBinAddr: 0x10000274C, symSize: 0xE0 }
-  - { offsetInCU: 0x26, offset: 0x17B, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000282C, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x1F8, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000282C, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x24A, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000029B4, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x272, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000029D8, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x2D2, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002AA8, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x340, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002C00, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x392, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002D34, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x512, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002E88, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x52D, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002EFC, symSize: 0x40 }
-  - { offsetInCU: 0x66, offset: 0x552, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x576, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x1000031FC, symSize: 0x74 }
-  - { offsetInCU: 0xAF, offset: 0x59B, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x5C1, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002FF4, symSize: 0x188 }
-  - { offsetInCU: 0xFA, offset: 0x5E6, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x865, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002E88, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x897, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002F3C, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0x8BF, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002F60, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0x911, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x10000317C, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0x963, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x1000031D4, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0x98B, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100003270, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0x9B3, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100003298, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0x9C8, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x1000032D8, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xB11, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000033AC, symSize: 0x30 }
-  - { offsetInCU: 0x4D, offset: 0xB38, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
-  - { offsetInCU: 0xA2, offset: 0xB8D, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
-  - { offsetInCU: 0xB7, offset: 0xBA2, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xBAB, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000033AC, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xBC0, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x1000033DC, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xBE4, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100003484, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xC16, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100003584, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xC3A, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000035BC, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xCB2, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000036AC, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xCD5, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000036AC, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xD35, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100003740, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xD95, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000037B4, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xDD9, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003820, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xE77, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003880, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xEA4, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003880, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0xEF6, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100003970, symSize: 0x160 }
-  - { offsetInCU: 0x121, offset: 0xF72, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x250, symBinAddr: 0x100003AD0, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002584, symSize: 0x6C }
+  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100002584, symSize: 0x6C }
+  - { offsetInCU: 0xBD, offset: 0xBD, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x6C, symBinAddr: 0x1000025F0, symSize: 0x94 }
+  - { offsetInCU: 0x101, offset: 0x101, size: 0x8, addend: 0x0, symName: _serverControl, symObjAddr: 0x100, symBinAddr: 0x100002684, symSize: 0x70 }
+  - { offsetInCU: 0x141, offset: 0x141, size: 0x8, addend: 0x0, symName: _recvFromClient, symObjAddr: 0x170, symBinAddr: 0x1000026F4, symSize: 0xE0 }
+  - { offsetInCU: 0x181, offset: 0x181, size: 0x8, addend: 0x0, symName: _addNewSocket, symObjAddr: 0x250, symBinAddr: 0x1000027D4, symSize: 0x34 }
+  - { offsetInCU: 0x1B3, offset: 0x1B3, size: 0x8, addend: 0x0, symName: _processClient, symObjAddr: 0x284, symBinAddr: 0x100002808, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x22D, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000282C, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x2AA, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x10000282C, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x2FC, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000029B4, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x324, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000029D8, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x384, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002AA8, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x3F2, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002C00, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x444, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002D34, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x5C4, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002E88, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x5DF, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002EFC, symSize: 0x40 }
+  - { offsetInCU: 0x66, offset: 0x604, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x628, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x1000031FC, symSize: 0x74 }
+  - { offsetInCU: 0xAF, offset: 0x64D, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
+  - { offsetInCU: 0xD5, offset: 0x673, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002FF4, symSize: 0x188 }
+  - { offsetInCU: 0xFA, offset: 0x698, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
+  - { offsetInCU: 0x379, offset: 0x917, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002E88, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0x949, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002F3C, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0x971, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002F60, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0x9C3, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x10000317C, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0xA15, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x1000031D4, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xA3D, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100003270, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xA65, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100003298, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xA7A, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x1000032D8, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xBC3, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000033AC, symSize: 0x30 }
+  - { offsetInCU: 0x4D, offset: 0xBEA, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
+  - { offsetInCU: 0xA2, offset: 0xC3F, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
+  - { offsetInCU: 0xB7, offset: 0xC54, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xC5D, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000033AC, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xC72, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x1000033DC, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xC96, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100003484, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xCC8, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100003584, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xCEC, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000035BC, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xD64, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000036AC, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xD87, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000036AC, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xDE7, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100003740, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xE47, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000037B4, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xE8B, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003820, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0xF29, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003880, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0xF56, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003880, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0xFA8, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100003970, symSize: 0x160 }
+  - { offsetInCU: 0x121, offset: 0x1024, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x250, symBinAddr: 0x100003AD0, symSize: 0x24 }
 ...
