--- a/handle_table.dSYM/Contents/Resources/Relocations/aarch64/handle_table.yml
+++ b/handle_table.dSYM/Contents/Resources/Relocations/aarch64/handle_table.yml
@@ -2,53 +2,55 @@
 triple:          'arm64-apple-darwin'
 binary-path:     handle_table
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100002090, symSize: 0x6C }
-  - { offsetInCU: 0x41, offset: 0x41, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100002090, symSize: 0x6C }
-  - { offsetInCU: 0x77, offset: 0x77, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x6C, symBinAddr: 0x1000020FC, symSize: 0x90 }
-  - { offsetInCU: 0xBB, offset: 0xBB, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0xFC, symBinAddr: 0x10000218C, symSize: 0xD0 }
-  - { offsetInCU: 0x117, offset: 0x117, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x1CC, symBinAddr: 0x10000225C, symSize: 0xE8 }
-  - { offsetInCU: 0x173, offset: 0x173, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x2B4, symBinAddr: 0x100002344, symSize: 0xA4 }
-  - { offsetInCU: 0x1C5, offset: 0x1C5, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x358, symBinAddr: 0x1000023E8, symSize: 0xE4 }
-  - { offsetInCU: 0x221, offset: 0x221, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x43C, symBinAddr: 0x1000024CC, symSize: 0xA8 }
-  - { offsetInCU: 0x299, offset: 0x299, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x4E4, symBinAddr: 0x100002574, symSize: 0x140 }
-  - { offsetInCU: 0x26, offset: 0x394, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000026B4, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x411, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x1000026B4, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x463, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x10000283C, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x48B, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100002860, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x4EB, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002930, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x559, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002A88, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x5AB, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002BBC, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x72B, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002D10, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x746, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002D84, symSize: 0x40 }
-  - { offsetInCU: 0x66, offset: 0x76B, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x78F, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100003084, symSize: 0x74 }
-  - { offsetInCU: 0xAF, offset: 0x7B4, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x7DA, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002E7C, symSize: 0x188 }
-  - { offsetInCU: 0xFA, offset: 0x7FF, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0xA7E, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002D10, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0xAB0, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002DC4, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0xAD8, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002DE8, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0xB2A, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100003004, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0xB7C, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x10000305C, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0xBA4, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x1000030F8, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xBCC, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100003120, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xBE1, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100003160, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xD2A, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003234, symSize: 0x30 }
-  - { offsetInCU: 0x4D, offset: 0xD51, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
-  - { offsetInCU: 0xA2, offset: 0xDA6, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
-  - { offsetInCU: 0xB7, offset: 0xDBB, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xDC4, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003234, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xDD9, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100003264, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xDFD, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x10000330C, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xE2F, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x10000340C, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xE53, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100003444, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xECB, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003534, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xEEE, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003534, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xF4E, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x1000035C8, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xFAE, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x10000363C, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xFF2, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x1000036A8, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0x1090, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003708, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0x10BD, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003708, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0x110F, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x1000037F8, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0x118D, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x1000039D4, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100001CD4, symSize: 0x70 }
+  - { offsetInCU: 0x48, offset: 0x48, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x100001CD4, symSize: 0x70 }
+  - { offsetInCU: 0x8C, offset: 0x8C, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100001D44, symSize: 0xB0 }
+  - { offsetInCU: 0xC2, offset: 0xC2, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x100001DF4, symSize: 0x38 }
+  - { offsetInCU: 0xF4, offset: 0xF4, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x100001E2C, symSize: 0x180 }
+  - { offsetInCU: 0x1A4, offset: 0x1A4, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x100001FAC, symSize: 0x154 }
+  - { offsetInCU: 0x200, offset: 0x200, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x42C, symBinAddr: 0x100002100, symSize: 0x108 }
+  - { offsetInCU: 0x25C, offset: 0x25C, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x534, symBinAddr: 0x100002208, symSize: 0xB0 }
+  - { offsetInCU: 0x2AE, offset: 0x2AE, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E4, symBinAddr: 0x1000022B8, symSize: 0xF0 }
+  - { offsetInCU: 0x30A, offset: 0x30A, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D4, symBinAddr: 0x1000023A8, symSize: 0xC0 }
+  - { offsetInCU: 0x382, offset: 0x382, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x794, symBinAddr: 0x100002468, symSize: 0x1A8 }
+  - { offsetInCU: 0x26, offset: 0x48E, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002610, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x50B, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002610, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x55D, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x100002798, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x585, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000027BC, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x5E5, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x10000288C, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x653, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x1000029E4, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x6A5, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002B18, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x825, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002C6C, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x840, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002CE0, symSize: 0x40 }
+  - { offsetInCU: 0x66, offset: 0x865, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x8A, offset: 0x889, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100002FE0, symSize: 0x74 }
+  - { offsetInCU: 0xAF, offset: 0x8AE, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
+  - { offsetInCU: 0xD5, offset: 0x8D4, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002DD8, symSize: 0x188 }
+  - { offsetInCU: 0xFA, offset: 0x8F9, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
+  - { offsetInCU: 0x379, offset: 0xB78, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002C6C, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0xBAA, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002D20, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0xBD2, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002D44, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0xC24, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100002F60, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0xC76, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x100002FB8, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xC9E, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100003054, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xCC6, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x10000307C, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xCDB, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x1000030BC, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xE24, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003190, symSize: 0x30 }
+  - { offsetInCU: 0x4D, offset: 0xE4B, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
+  - { offsetInCU: 0xA2, offset: 0xEA0, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
+  - { offsetInCU: 0xB7, offset: 0xEB5, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
+  - { offsetInCU: 0xC0, offset: 0xEBE, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100003190, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xED3, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x1000031C0, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xEF7, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100003268, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xF29, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100003368, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xF4D, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000033A0, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xFC5, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003490, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xFE8, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100003490, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0x1048, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100003524, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0x10A8, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100003598, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0x10EC, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003604, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0x118A, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003664, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0x11B7, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003664, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0x1209, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100003754, symSize: 0x1DC }
+  - { offsetInCU: 0x123, offset: 0x1287, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100003930, symSize: 0x24 }
 ...
