--- a/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
+++ b/cclient.dSYM/Contents/Resources/Relocations/aarch64/cclient.yml
@@ -2,52 +2,62 @@
 triple:          'arm64-apple-darwin'
 binary-path:     cclient
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000022B0, symSize: 0x70 }
-  - { offsetInCU: 0x53, offset: 0x53, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x1000022B0, symSize: 0x70 }
-  - { offsetInCU: 0x97, offset: 0x97, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x70, symBinAddr: 0x100002320, symSize: 0x58 }
-  - { offsetInCU: 0xC9, offset: 0xC9, size: 0x8, addend: 0x0, symName: _clientControl, symObjAddr: 0xC8, symBinAddr: 0x100002378, symSize: 0xB8 }
-  - { offsetInCU: 0xFB, offset: 0xFB, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x180, symBinAddr: 0x100002430, symSize: 0xD0 }
-  - { offsetInCU: 0x13F, offset: 0x13F, size: 0x8, addend: 0x0, symName: _processMsgFromServer, symObjAddr: 0x250, symBinAddr: 0x100002500, symSize: 0x110 }
-  - { offsetInCU: 0x18D, offset: 0x18D, size: 0x8, addend: 0x0, symName: _processStdin, symObjAddr: 0x360, symBinAddr: 0x100002610, symSize: 0xEC }
-  - { offsetInCU: 0x1DB, offset: 0x1DB, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x44C, symBinAddr: 0x1000026FC, symSize: 0x24 }
-  - { offsetInCU: 0x26, offset: 0x25E, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002720, symSize: 0x188 }
-  - { offsetInCU: 0xA3, offset: 0x2DB, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100002720, symSize: 0x188 }
-  - { offsetInCU: 0xF5, offset: 0x32D, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x1000028A8, symSize: 0x24 }
-  - { offsetInCU: 0x11D, offset: 0x355, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x1000028CC, symSize: 0xD0 }
-  - { offsetInCU: 0x17D, offset: 0x3B5, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x10000299C, symSize: 0x158 }
-  - { offsetInCU: 0x1EB, offset: 0x423, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002AF4, symSize: 0x134 }
-  - { offsetInCU: 0x23D, offset: 0x475, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x100002C28, symSize: 0x154 }
-  - { offsetInCU: 0x26, offset: 0x5F5, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002D7C, symSize: 0x74 }
-  - { offsetInCU: 0x41, offset: 0x610, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002DF0, symSize: 0x40 }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100001A34, symSize: 0x70 }
+  - { offsetInCU: 0x53, offset: 0x53, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x0, symBinAddr: 0x100001A34, symSize: 0x70 }
+  - { offsetInCU: 0x97, offset: 0x97, size: 0x8, addend: 0x0, symName: _checkArgs, symObjAddr: 0x70, symBinAddr: 0x100001AA4, symSize: 0x58 }
+  - { offsetInCU: 0xC9, offset: 0xC9, size: 0x8, addend: 0x0, symName: _clientControl, symObjAddr: 0xC8, symBinAddr: 0x100001AFC, symSize: 0xB8 }
+  - { offsetInCU: 0xFB, offset: 0xFB, size: 0x8, addend: 0x0, symName: _readFromStdin, symObjAddr: 0x180, symBinAddr: 0x100001BB4, symSize: 0xD0 }
+  - { offsetInCU: 0x13F, offset: 0x13F, size: 0x8, addend: 0x0, symName: _processMsgFromServer, symObjAddr: 0x250, symBinAddr: 0x100001C84, symSize: 0x110 }
+  - { offsetInCU: 0x18D, offset: 0x18D, size: 0x8, addend: 0x0, symName: _processStdin, symObjAddr: 0x360, symBinAddr: 0x100001D94, symSize: 0xEC }
+  - { offsetInCU: 0x1DB, offset: 0x1DB, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x44C, symBinAddr: 0x100001E80, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x25E, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001EA4, symSize: 0x188 }
+  - { offsetInCU: 0xA3, offset: 0x2DB, size: 0x8, addend: 0x0, symName: _tcpServerSetup, symObjAddr: 0x0, symBinAddr: 0x100001EA4, symSize: 0x188 }
+  - { offsetInCU: 0xF5, offset: 0x32D, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x188, symBinAddr: 0x10000202C, symSize: 0x24 }
+  - { offsetInCU: 0x11D, offset: 0x355, size: 0x8, addend: 0x0, symName: _tcpAccept, symObjAddr: 0x1AC, symBinAddr: 0x100002050, symSize: 0xD0 }
+  - { offsetInCU: 0x17D, offset: 0x3B5, size: 0x8, addend: 0x0, symName: _tcpClientSetup, symObjAddr: 0x27C, symBinAddr: 0x100002120, symSize: 0x158 }
+  - { offsetInCU: 0x1EB, offset: 0x423, size: 0x8, addend: 0x0, symName: _udpServerSetup, symObjAddr: 0x3D4, symBinAddr: 0x100002278, symSize: 0x134 }
+  - { offsetInCU: 0x23D, offset: 0x475, size: 0x8, addend: 0x0, symName: _setupUdpClientToServer, symObjAddr: 0x508, symBinAddr: 0x1000023AC, symSize: 0x154 }
+  - { offsetInCU: 0x26, offset: 0x5F5, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002500, symSize: 0x74 }
+  - { offsetInCU: 0x41, offset: 0x610, size: 0x8, addend: 0x0, symName: _ipAddressToString, symObjAddr: 0x74, symBinAddr: 0x100002574, symSize: 0x40 }
   - { offsetInCU: 0x66, offset: 0x635, size: 0x8, addend: 0x0, symName: _ipAddressToString.ipString, symObjAddr: 0x1E6D, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x8A, offset: 0x659, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x1000030F0, symSize: 0x74 }
+  - { offsetInCU: 0x8A, offset: 0x659, size: 0x8, addend: 0x0, symName: _getIPAddressString46, symObjAddr: 0x374, symBinAddr: 0x100002874, symSize: 0x74 }
   - { offsetInCU: 0xAF, offset: 0x67E, size: 0x8, addend: 0x0, symName: _getIPAddressString46.ipString, symObjAddr: 0x1E9B, symBinAddr: 0x10000802E, symSize: 0x0 }
-  - { offsetInCU: 0xD5, offset: 0x6A4, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x100002EE8, symSize: 0x188 }
+  - { offsetInCU: 0xD5, offset: 0x6A4, size: 0x8, addend: 0x0, symName: _getIPAddress46, symObjAddr: 0x16C, symBinAddr: 0x10000266C, symSize: 0x188 }
   - { offsetInCU: 0xFA, offset: 0x6C9, size: 0x8, addend: 0x0, symName: _getIPAddress46.ipAddress, symObjAddr: 0x1EC9, symBinAddr: 0x10000805C, symSize: 0x0 }
-  - { offsetInCU: 0x379, offset: 0x948, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002D7C, symSize: 0x74 }
-  - { offsetInCU: 0x3AB, offset: 0x97A, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x100002E30, symSize: 0x24 }
-  - { offsetInCU: 0x3D3, offset: 0x9A2, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x100002E54, symSize: 0x94 }
-  - { offsetInCU: 0x425, offset: 0x9F4, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x100003070, symSize: 0x58 }
-  - { offsetInCU: 0x477, offset: 0xA46, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x1000030C8, symSize: 0x28 }
-  - { offsetInCU: 0x49F, offset: 0xA6E, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x100003164, symSize: 0x28 }
-  - { offsetInCU: 0x4C7, offset: 0xA96, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x10000318C, symSize: 0x40 }
-  - { offsetInCU: 0x4DC, offset: 0xAAB, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x1000031CC, symSize: 0xD4 }
-  - { offsetInCU: 0x26, offset: 0xBF4, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000032A0, symSize: 0x30 }
+  - { offsetInCU: 0x379, offset: 0x948, size: 0x8, addend: 0x0, symName: _printIPInfo, symObjAddr: 0x0, symBinAddr: 0x100002500, symSize: 0x74 }
+  - { offsetInCU: 0x3AB, offset: 0x97A, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0xB4, symBinAddr: 0x1000025B4, symSize: 0x24 }
+  - { offsetInCU: 0x3D3, offset: 0x9A2, size: 0x8, addend: 0x0, symName: _gethostbyname4, symObjAddr: 0xD8, symBinAddr: 0x1000025D8, symSize: 0x94 }
+  - { offsetInCU: 0x425, offset: 0x9F4, size: 0x8, addend: 0x0, symName: _gethostbyname6, symObjAddr: 0x2F4, symBinAddr: 0x1000027F4, symSize: 0x58 }
+  - { offsetInCU: 0x477, offset: 0xA46, size: 0x8, addend: 0x0, symName: _getIPAddressString4, symObjAddr: 0x34C, symBinAddr: 0x10000284C, symSize: 0x28 }
+  - { offsetInCU: 0x49F, offset: 0xA6E, size: 0x8, addend: 0x0, symName: _getIPAddressString6, symObjAddr: 0x3E8, symBinAddr: 0x1000028E8, symSize: 0x28 }
+  - { offsetInCU: 0x4C7, offset: 0xA96, size: 0x8, addend: 0x0, symName: _gethostbyname_test, symObjAddr: 0x410, symBinAddr: 0x100002910, symSize: 0x40 }
+  - { offsetInCU: 0x4DC, offset: 0xAAB, size: 0x8, addend: 0x0, symName: _gethostbyname_test_lookup, symObjAddr: 0x450, symBinAddr: 0x100002950, symSize: 0xD4 }
+  - { offsetInCU: 0x26, offset: 0xBF4, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100002A24, symSize: 0x30 }
   - { offsetInCU: 0x4D, offset: 0xC1B, size: 0x8, addend: 0x0, symName: _pollFileDescriptors, symObjAddr: 0xCF8, symBinAddr: 0x100008098, symSize: 0x0 }
   - { offsetInCU: 0xA2, offset: 0xC70, size: 0x8, addend: 0x0, symName: _currentPollSetSize, symObjAddr: 0xCF0, symBinAddr: 0x100008090, symSize: 0x0 }
   - { offsetInCU: 0xB7, offset: 0xC85, size: 0x8, addend: 0x0, symName: _maxFileDescriptor, symObjAddr: 0xD00, symBinAddr: 0x1000080A0, symSize: 0x0 }
-  - { offsetInCU: 0xC0, offset: 0xC8E, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x1000032A0, symSize: 0x30 }
-  - { offsetInCU: 0xD5, offset: 0xCA3, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x1000032D0, symSize: 0xA8 }
-  - { offsetInCU: 0xF9, offset: 0xCC7, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100003378, symSize: 0x100 }
-  - { offsetInCU: 0x12B, offset: 0xCF9, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100003478, symSize: 0x38 }
-  - { offsetInCU: 0x14F, offset: 0xD1D, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x1000034B0, symSize: 0xF0 }
-  - { offsetInCU: 0x26, offset: 0xD95, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000035A0, symSize: 0x94 }
-  - { offsetInCU: 0x49, offset: 0xDB8, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x1000035A0, symSize: 0x94 }
-  - { offsetInCU: 0xA9, offset: 0xE18, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100003634, symSize: 0x74 }
-  - { offsetInCU: 0x109, offset: 0xE78, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x1000036A8, symSize: 0x6C }
-  - { offsetInCU: 0x14D, offset: 0xEBC, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100003714, symSize: 0x60 }
-  - { offsetInCU: 0x26, offset: 0xF5A, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003774, symSize: 0xF0 }
-  - { offsetInCU: 0x53, offset: 0xF87, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100003774, symSize: 0xF0 }
-  - { offsetInCU: 0xA5, offset: 0xFD9, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100003864, symSize: 0x1DC }
-  - { offsetInCU: 0x123, offset: 0x1057, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x100003A40, symSize: 0x24 }
+  - { offsetInCU: 0xC0, offset: 0xC8E, size: 0x8, addend: 0x0, symName: _setupPollSet, symObjAddr: 0x0, symBinAddr: 0x100002A24, symSize: 0x30 }
+  - { offsetInCU: 0xD5, offset: 0xCA3, size: 0x8, addend: 0x0, symName: _addToPollSet, symObjAddr: 0x30, symBinAddr: 0x100002A54, symSize: 0xA8 }
+  - { offsetInCU: 0xF9, offset: 0xCC7, size: 0x8, addend: 0x0, symName: _growPollSet, symObjAddr: 0xD8, symBinAddr: 0x100002AFC, symSize: 0x100 }
+  - { offsetInCU: 0x12B, offset: 0xCF9, size: 0x8, addend: 0x0, symName: _removeFromPollSet, symObjAddr: 0x1D8, symBinAddr: 0x100002BFC, symSize: 0x38 }
+  - { offsetInCU: 0x14F, offset: 0xD1D, size: 0x8, addend: 0x0, symName: _pollCall, symObjAddr: 0x210, symBinAddr: 0x100002C34, symSize: 0xF0 }
+  - { offsetInCU: 0x26, offset: 0xD95, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002D24, symSize: 0x94 }
+  - { offsetInCU: 0x49, offset: 0xDB8, size: 0x8, addend: 0x0, symName: _safeRecv, symObjAddr: 0x0, symBinAddr: 0x100002D24, symSize: 0x94 }
+  - { offsetInCU: 0xA9, offset: 0xE18, size: 0x8, addend: 0x0, symName: _safeSend, symObjAddr: 0x94, symBinAddr: 0x100002DB8, symSize: 0x74 }
+  - { offsetInCU: 0x109, offset: 0xE78, size: 0x8, addend: 0x0, symName: _srealloc, symObjAddr: 0x108, symBinAddr: 0x100002E2C, symSize: 0x6C }
+  - { offsetInCU: 0x14D, offset: 0xEBC, size: 0x8, addend: 0x0, symName: _sCalloc, symObjAddr: 0x174, symBinAddr: 0x100002E98, symSize: 0x60 }
+  - { offsetInCU: 0x26, offset: 0xF5A, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100002EF8, symSize: 0xF0 }
+  - { offsetInCU: 0x53, offset: 0xF87, size: 0x8, addend: 0x0, symName: _sendPDU, symObjAddr: 0x0, symBinAddr: 0x100002EF8, symSize: 0xF0 }
+  - { offsetInCU: 0xA5, offset: 0xFD9, size: 0x8, addend: 0x0, symName: _recvPDU, symObjAddr: 0xF0, symBinAddr: 0x100002FE8, symSize: 0x1DC }
+  - { offsetInCU: 0x123, offset: 0x1057, size: 0x8, addend: 0x0, symName: __OSSwapInt16, symObjAddr: 0x2CC, symBinAddr: 0x1000031C4, symSize: 0x24 }
+  - { offsetInCU: 0x26, offset: 0x10D0, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000031E8, symSize: 0x70 }
+  - { offsetInCU: 0x48, offset: 0x10F2, size: 0x8, addend: 0x0, symName: _hash_func, symObjAddr: 0x0, symBinAddr: 0x1000031E8, symSize: 0x70 }
+  - { offsetInCU: 0x8C, offset: 0x1136, size: 0x8, addend: 0x0, symName: _create_table, symObjAddr: 0x70, symBinAddr: 0x100003258, symSize: 0xB0 }
+  - { offsetInCU: 0xC2, offset: 0x116C, size: 0x8, addend: 0x0, symName: _resize_table, symObjAddr: 0x120, symBinAddr: 0x100003308, symSize: 0x38 }
+  - { offsetInCU: 0xF4, offset: 0x119E, size: 0x8, addend: 0x0, symName: _rehash_table, symObjAddr: 0x158, symBinAddr: 0x100003340, symSize: 0x180 }
+  - { offsetInCU: 0x1A4, offset: 0x124E, size: 0x8, addend: 0x0, symName: _addHandleSockPair, symObjAddr: 0x2D8, symBinAddr: 0x1000034C0, symSize: 0x158 }
+  - { offsetInCU: 0x200, offset: 0x12AA, size: 0x8, addend: 0x0, symName: _removeHandleSockPair, symObjAddr: 0x430, symBinAddr: 0x100003618, symSize: 0x108 }
+  - { offsetInCU: 0x25C, offset: 0x1306, size: 0x8, addend: 0x0, symName: _getSockNum, symObjAddr: 0x538, symBinAddr: 0x100003720, symSize: 0xB0 }
+  - { offsetInCU: 0x2AE, offset: 0x1358, size: 0x8, addend: 0x0, symName: _print_table, symObjAddr: 0x5E8, symBinAddr: 0x1000037D0, symSize: 0xF0 }
+  - { offsetInCU: 0x30A, offset: 0x13B4, size: 0x8, addend: 0x0, symName: _free_table, symObjAddr: 0x6D8, symBinAddr: 0x1000038C0, symSize: 0xC0 }
 ...
